<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ArtRegister</string>
    <string name="server_address">Server Address</string>
    <string name="reload">Reload</string>
    <string name="you">You</string>

    <string name="user_settings">User Settings</string>
    <string name="username">Username</string>
    <string name="new_username">New Username</string>
    <string name="loading">Loading…</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="network_error">Network Error</string>
    <string name="creator">Creator</string>
    <string name="owner">Owner</string>
    <string name="on_sale">On Sale</string>
    <string name="old_owner">Old Owner</string>
    <string name="new_owner">New Owner</string>
    <string name="dt">Date/Time</string>

    <string name="new_piece">New Piece</string>
    <string name="piece_name">Piece Name</string>
    <string name="nfc_unsupported">NFC Not Supported!</string>
    <string name="scan_card_hint">Please scan the tag</string>
    <string name="card_scanned">Tag collected!</string>
    <string name="name_empty">The name is empty!</string>
    <string name="commit">Commit</string>
    <string name="my_creations">My Creations</string>
    <string name="no_creation">No creation is found</string>
    <string name="piece_not_found">No such piece is found</string>
    <string name="user_not_found">User not found</string>
    <string name="view_transactions">View Transactions</string>
    <string name="no_transaction">No transaction is found</string>
    <string name="transfer">Transfer</string>
    <string name="cannot_transfer_self">Cannot transfer to yourself!</string>

    <string name="foo">Foo</string>
    <string name="shit">Shit</string>

    <string-array name="user_types">
        <item>Collector</item>
        <item>Creator</item>
    </string-array>

    <string name="placeholder_string" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur consectetur, nisl nisi consectetur nisi, euismod euismod nisi nisi euismod.</string>
</resources>
