<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pieceNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/piece_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/scanCardHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="6dp"
        android:text="@string/scan_card_hint"
        android:textSize="20sp" />

    <Button
        android:id="@+id/commitPieceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/commit"
        android:textSize="16sp" />

</LinearLayout>